--- a/.gitignore
+++ b/.gitignore
@@ -157,8 +157,11 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-<<<<<<< HEAD
-#.idea/
-=======
-#.idea/
->>>>>>> 7e8a419 (Initial commit)
+.idea/
+
+*.zip
+.zip
+
+.node_modules
+node_modules
+node_modules/
