--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.2",
+    "canvas-confetti": "^1.9.2",
     "cors": "^2.8.5",
+    "react-confetti": "^6.1.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.4",
     "typewriter-effect": "^2.21.0"
