--- a/frontend/FiveLetters/package.json
+++ b/frontend/FiveLetters/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "author": "Trum-ok",
+  "description": "Wordle clone",
+  "repository": "https://github.com/Trum-ok/5letters-web",
   "proxy": "http://127.0.0.1:8080",
   "scripts": {
     "dev": "vite",
