--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,12 @@
-version: '3'
+version: '3.8'
 services:
   backend:
     build: ./backend
     ports:
       - "8080:8080"
   frontend:
-    build: ./frontend
+    build: ./frontend/FiveLetters
     ports:
-      - "3000:3000"
+      - "3001:3001"
+    depends_on:
+      - backend
