--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,15 @@
 blinker==1.7.0
+certifi==2025.1.31
 click==8.1.7
+colorama==0.4.6
+elastic-transport==8.17.0
+elasticsearch==8.17.1
 Flask==3.0.0
 Flask-Cors==4.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+prometheus_client==0.21.1
+python-dotenv==1.0.1
+urllib3==2.3.0
 Werkzeug==3.0.1
