Dockerfile was updated

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,12 @@
-FROM python:3.11.1-alpine
+FROM python:3.12.5-alpine
+
+ARG FLASK_PORT=8080
+ENV FLASK_PORT=${FLASK_PORT}
+ARG PROMETHEUS_PORT=5001
+ENV PROMETHEUS_PORT=${PROMETHEUS_PORT}
+
+RUN apk add --no-cache curl
+
 WORKDIR /app
 
 COPY requirements.txt .
@@ -7,6 +15,4 @@ RUN pip install -r requirements.txt
 COPY russian_words.txt .
 COPY . .
 
-EXPOSE 8080
-
-CMD ["python", "app.py"]
+CMD ["sh", "-c", "python app.py --port ${FLASK_PORT} --promport ${PROMETHEUS_PORT}"]
