--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,31 @@
-version: '3.8'
 services:
   backend:
-    build: ./backend
+    build:
+      context: ./backend
+      args:
+        - FLASK_PORT=${FLASK_PORT}
     ports:
-      - "8080:8080"
+      - "${FLASK_PORT}:${FLASK_PORT}"
+      - "${PROMETHEUS_PORT}:${PROMETHEUS_PORT}"
+    environment:
+      - FLASK_PORT=${FLASK_PORT}
+      - PROMETHEUS_PORT=${PROMETHEUS_PORT}
+    healthcheck:
+      test: ["CMD-SHELL", "curl --fail http://localhost:${FLASK_PORT}/ || exit 1"]
+      interval: 60s
+      timeout: 5s
+      retries: 1
+      start_period: 30s
   frontend:
-    build: ./frontend/FiveLetters
+    build: ./frontend
     ports:
-      - "3001:3001"
+      - "${FRONT_PORT}:80"
+    environment:
+      - FRONT_PORT=${FRONT_PORT}
+    healthcheck:
+      test: ["CMD-SHELL", "curl --fail http://localhost:80 || exit 1"]
+      interval: 60s
+      timeout: 5s
+      retries: 1
     depends_on:
       - backend
