--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,10 +6,16 @@ elastic-transport==8.17.0
 elasticsearch==8.17.1
 Flask==3.0.0
 Flask-Cors==4.0.0
+gevent==24.11.1
+greenlet==3.1.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 prometheus_client==0.21.1
 python-dotenv==1.0.1
+python-json-logger==3.2.1
+setuptools==75.8.0
 urllib3==2.3.0
 Werkzeug==3.0.1
+zope.event==5.0
+zope.interface==7.2
