--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
-FLASK_PORT=8080
-PROMETHEUS_METRICS_PORT=5001
+# backend
+BACK_PORT=8080
+GUNICORN_PORT=8081
+PROMETHEUS_PORT=5001
+
+# frontend
 FRONT_PORT=3001
