--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,6 +11,8 @@ FROM nginx:1.27.4-alpine AS production
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=builder /app/dist /usr/share/nginx/html
 
+ARG VITE_BACK_PORT
+
 RUN echo "nginx -s reload;" > /reload.sh && \
     chmod +x /reload.sh
 
