--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,14 +14,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typewriter-effect": "^2.21.0",
     "axios": "^1.6.5",
-    "react-confetti": "^6.1.0"
+    "dotenv": "^16.4.7",
+    "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
+    "react-dom": "^18.2.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/node": "^22.13.4",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
