--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,25 +3,40 @@ services:
     build:
       context: ./backend
       args:
-        - FLASK_PORT=${FLASK_PORT}
+        - GUNICORN_PORT=${GUNICORN_PORT}
     ports:
-      - "${FLASK_PORT}:${FLASK_PORT}"
+      - "${GUNICORN_PORT}:${GUNICORN_PORT}"
       - "${PROMETHEUS_PORT}:${PROMETHEUS_PORT}"
     environment:
-      - FLASK_PORT=${FLASK_PORT}
+      - GUNICORN_PORT=${GUNICORN_PORT}
       - PROMETHEUS_PORT=${PROMETHEUS_PORT}
     healthcheck:
-      test: ["CMD-SHELL", "curl --fail http://localhost:${FLASK_PORT}/ || exit 1"]
+      test: ["CMD-SHELL", "curl --fail http://localhost:${GUNICORN_PORT}/ || exit 1"]
       interval: 60s
       timeout: 5s
       retries: 1
       start_period: 30s
+    networks:
+      - backend
+
+  # nginx:
+  #   image: nginx:alpine
+  #   ports:
+  #     - "${BACK_PORT}:${BACK_PORT}"
+  #   volumes:
+  #     - ./nginx.conf:/etc/nginx/nginx.conf
+  #   depends_on:
+  #     - backend
+  #   networks:
+  #     - backend
+
   frontend:
     build: ./frontend
     ports:
       - "${FRONT_PORT}:80"
     environment:
       - FRONT_PORT=${FRONT_PORT}
+      - VITE_BACK_PORT=${VITE_BACK_PORT}
     healthcheck:
       test: ["CMD-SHELL", "curl --fail http://localhost:80 || exit 1"]
       interval: 60s
@@ -29,3 +44,6 @@ services:
       retries: 1
     depends_on:
       - backend
+
+networks:
+  backend:
