--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -11,7 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GUNICORN_PORT: 8081
-      FRONTEND_PORT: 3001
+      FRONT_PORT: 3001
+      PROMETHEUS_PORT: 9901
+      VITE_BACK_PORT: 1213
 
     steps:
     - name: Checkout code
