--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,49 +1,94 @@
 services:
-  backend:
-    build:
-      context: ./backend
-      args:
-        - GUNICORN_PORT=${GUNICORN_PORT}
-    ports:
-      - "${GUNICORN_PORT}:${GUNICORN_PORT}"
-      - "${PROMETHEUS_PORT}:${PROMETHEUS_PORT}"
-    environment:
-      - GUNICORN_PORT=${GUNICORN_PORT}
-      - PROMETHEUS_PORT=${PROMETHEUS_PORT}
-    healthcheck:
-      test: ["CMD-SHELL", "curl --fail http://localhost:${GUNICORN_PORT}/ || exit 1"]
-      interval: 60s
-      timeout: 5s
-      retries: 1
-      start_period: 30s
-    networks:
-      - backend
-
-  # nginx:
-  #   image: nginx:alpine
+    backend:
+        build:
+            context: ./backend
+            args:
+                - GUNICORN_PORT=${GUNICORN_PORT}
+                - PROMETHEUS_PORT=${PROMETHEUS_PORT}
+        ports:
+            - "${GUNICORN_PORT}:${GUNICORN_PORT}"
+            - "${PROMETHEUS_PORT}:${PROMETHEUS_PORT}"
+        environment:
+            - GUNICORN_PORT=${GUNICORN_PORT}
+            - PROMETHEUS_PORT=${PROMETHEUS_PORT}
+        healthcheck:
+            test: ["CMD-SHELL", "curl --fail http://localhost:${GUNICORN_PORT}/ || exit 1"]
+            interval: 60s
+            timeout: 5s
+            retries: 1
+            start_period: 30s
+        networks:
+            - backend_net
+  
+    backend_nginx:
+        build:
+            ./nginxb
+        volumes:
+            - ./nginxb/conf.d:/etc/nginx/conf.d
+            - ./ssl:/etc/ssl
+        environment:
+            - GUNICORN_PORT=${GUNICORN_PORT}
+            - PROMETHEUS_PORT=${PROMETHEUS_PORT}
+            - BACKEND_PORT=${BACK_PORT}
+        networks:
+            - public_net
+            - backend_net
+        ports:
+            - "${BACK_PORT}:443"
+  
+  # backend-nginx:
+  #   build:
+  #     context: ./nginx
+  #     args:
+  #       - FRONT_PORT=${FRONT_PORT}
+  #       - VITE_BACK_PORT=${VITE_BACK_PORT}
+  #       - SERVER_NAME=${SERVER_NAME}
+  #       - GUNICORN_PORT=${GUNICORN_PORT}
+  #       - PROMETHEUS_PORT=${PROMETHEUS_PORT}
+  #       - BACKEND_PORT=${BACK_PORT}
   #   ports:
-  #     - "${BACK_PORT}:${BACK_PORT}"
+  #     - "${FRONT_PORT_HTTP}:80"
+  #     - ${FRONT_PORT}:443
+  #     - ${VITE_BACK_PORT}:${VITE_BACK_PORT}
+  #     - ${SERVER_NAME}:${SERVER_NAME}
+  #     - ${GUNICORN_PORT}:${GUNICORN_PORT}
+  #     - ${PROMETHEUS_PORT}:${PROMETHEUS_PORT}
+  #   image: nginx:alpine
   #   volumes:
-  #     - ./nginx.conf:/etc/nginx/nginx.conf
-  #   depends_on:
-  #     - backend
-  #   networks:
-  #     - backend
+  #     - ./backend.conf:/etc/nginx/conf.d/default.conf
+  #     - ./ssl:/etc/ssl  # Монтируем SSL-сертификаты
+  #   ports:
+  #     # - "${BACKEND_PORT}:80"
+  #     - "${BACKEND_PORT}:443"  # Внешний порт для HTTPS
+  #   environment:
+  #     - GUNICORN_PORT=${GUNICORN_PORT}
+  #     - PROMETHEUS_PORT=${PROMETHEUS_PORT}
 
-  frontend:
-    build: ./frontend
-    ports:
-      - "${FRONT_PORT}:80"
-    environment:
-      - FRONT_PORT=${FRONT_PORT}
-      - VITE_BACK_PORT=${VITE_BACK_PORT}
-    healthcheck:
-      test: ["CMD-SHELL", "curl --fail http://localhost:80 || exit 1"]
-      interval: 60s
-      timeout: 5s
-      retries: 1
-    depends_on:
-      - backend
+    frontend:
+        build: ./frontend
+        volumes:
+            - ./frontend/nginx.conf:/etc/nginx/conf.d/default.conf
+            - ./ssl:/etc/ssl
+        ports:
+            - "${FRONT_PORT_HTTP}:80"
+            - "${FRONT_PORT}:443"
+        environment:
+            - FRONT_PORT=${FRONT_PORT}
+            - VITE_BACK_PORT=${VITE_BACK_PORT}
+            - SERVER_NAME=${SERVER_NAME}
+        healthcheck:
+            test: ["CMD-SHELL", "curl --fail https://localhost:443 || exit 1"]
+            interval: 60s
+            timeout: 5s
+            retries: 2
+            start_period: 15s
+        depends_on:
+            - backend
+        networks:
+            - public_net
 
 networks:
-  backend:
+    public_net:
+    backend_net:
+        # internal: true
+        driver: bridge
