--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,7 +1,22 @@
 server {
     listen 80;
     server_name localhost;
-    
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name localhost;
+
+    # Пути к SSL-сертификатам
+    ssl_certificate /etc/ssl/localhost.crt;
+    ssl_certificate_key /etc/ssl/localhost.key;
+
+    # Настройки SSL
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256";
+
     # Gzip сжатие
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
