--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -1,23 +1,34 @@
 name: CI/CD Pipeline
 
 on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+    push:
+        branches: [ "master" ]
+    pull_request:
+        branches: [ "master" ]
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
     env:
-      GUNICORN_PORT: 8081
-      FRONT_PORT: 3001
-      PROMETHEUS_PORT: 9901
-      VITE_BACK_PORT: 1213
+        GUNICORN_PORT: 8081
+        PROMETHEUS_PORT: 9901
+        BACK_PORT: 1213
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+
+    - name: Install curl and openssl
+      run: sudo apt-get update && sudo apt-get install -y curl openssl
+
+    - name: Generate test SSL certificates
+      run: |
+        mkdir -p ./ssl
+        openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
+          -keyout ./ssl/localhost.key \
+          -out ./ssl/localhost.crt \
+          -subj "/CN=localhost" \
+          -addext "subjectAltName = DNS:localhost"
 
     - name: Set up Docker
       uses: docker/setup-buildx-action@v2
@@ -28,12 +39,25 @@ jobs:
 
     - name: Start services
       run: |
-        docker compose up -d
-        sleep 3
+            docker compose up -d
+            sleep 7
+        
+    - name: Verify containers
+      run: docker ps -a
 
-    - name: Test backend (index page) | gunicorn
+    - name: Add SSL certificate to trust store
       run: |
-        response=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:${{ env.GUNICORN_PORT }}/)
+        docker cp backend_nginx:/etc/nginx/ssl/localhost.crt ./ 
+        sudo cp ./localhost.crt /usr/local/share/ca-certificates/
+        sudo update-ca-certificates
+
+    - name: Test NGINX SSL connection
+      run: |
+        openssl s_client -connect localhost:443 -showcerts -verify 5 </dev/null
+
+    - name: Test backend (index page) | nginx
+      run: |
+        response=$(curl -s -k -o /dev/null -w "%{http_code}" https://localhost:${{ env.BACK_PORT }}/)
         if [ "$response" -ne 200 ]; then
           echo "Backend test failed: Response code $response"
           exit 1
@@ -41,9 +65,9 @@ jobs:
           echo "Backend test passed: Response code 200"
         fi
 
-    - name: Test backend (get random word api) | gunicorn
+    - name: Test backend (get random word api) | nginx
       run: |
-        response=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:${{ env.GUNICORN_PORT }}/get_random_word)
+        response=$(curl -s -k -o /dev/null -w "%{http_code}" https://localhost:${{ env.BACK_PORT }}/get_random_word)
         if [ "$response" -ne 200 ]; then
           echo "Backend test failed: Response code $response"
           exit 1
