--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,8 @@ services:
   
     backend_nginx:
         build:
-            ./nginxb
+            context: ./
+            dockerfile: ./nginxb/Dockerfile
         volumes:
             - ./nginxb/conf.d:/etc/nginx/conf.d
             - ./ssl:/etc/ssl
@@ -35,34 +36,8 @@ services:
             - backend_net
         ports:
             - "${BACK_PORT}:443"
-  
-  # backend-nginx:
-  #   build:
-  #     context: ./nginx
-  #     args:
-  #       - FRONT_PORT=${FRONT_PORT}
-  #       - VITE_BACK_PORT=${VITE_BACK_PORT}
-  #       - SERVER_NAME=${SERVER_NAME}
-  #       - GUNICORN_PORT=${GUNICORN_PORT}
-  #       - PROMETHEUS_PORT=${PROMETHEUS_PORT}
-  #       - BACKEND_PORT=${BACK_PORT}
-  #   ports:
-  #     - "${FRONT_PORT_HTTP}:80"
-  #     - ${FRONT_PORT}:443
-  #     - ${VITE_BACK_PORT}:${VITE_BACK_PORT}
-  #     - ${SERVER_NAME}:${SERVER_NAME}
-  #     - ${GUNICORN_PORT}:${GUNICORN_PORT}
-  #     - ${PROMETHEUS_PORT}:${PROMETHEUS_PORT}
-  #   image: nginx:alpine
-  #   volumes:
-  #     - ./backend.conf:/etc/nginx/conf.d/default.conf
-  #     - ./ssl:/etc/ssl  # Монтируем SSL-сертификаты
-  #   ports:
-  #     # - "${BACKEND_PORT}:80"
-  #     - "${BACKEND_PORT}:443"  # Внешний порт для HTTPS
-  #   environment:
-  #     - GUNICORN_PORT=${GUNICORN_PORT}
-  #     - PROMETHEUS_PORT=${PROMETHEUS_PORT}
+        depends_on:
+            - backend
 
     frontend:
         build: ./frontend
