frontend nginx configuration was changed

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,9 +40,11 @@ services:
             - backend
 
     frontend:
-        build: ./frontend
+        build: 
+            context: ./frontend
+            dockerfile: ./Dockerfile
         volumes:
-            - ./frontend/nginx.conf:/etc/nginx/conf.d/default.conf
+            - ./frontend/nginx/conf.d:/etc/nginx/conf.d
             - ./ssl:/etc/ssl
         ports:
             - "${FRONT_PORT_HTTP}:80"
