--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,10 +12,10 @@ services:
             - GUNICORN_PORT=${GUNICORN_PORT}
             - PROMETHEUS_PORT=${PROMETHEUS_PORT}
         healthcheck:
-            test: ["CMD-SHELL", "curl --fail http://localhost:${GUNICORN_PORT}/ || exit 1"]
+            test: ["CMD-SHELL", "wget --spider http://0.0.0.0:${GUNICORN_PORT}/ || exit 1"]
             interval: 60s
-            timeout: 5s
-            retries: 1
+            timeout: 10s
+            retries: 2
             start_period: 30s
         networks:
             - backend_net
