can now be quickly launched on any IP

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,9 @@ PROMETHEUS_PORT=5001
 # frontend
 FRONT_PORT=3001
 VITE_BACK_PORT=1213
+VITE_BACK_IP=95.165.90.10
 
 # nginx
-SERVER_NAME=localhost
+SERVER_NAME=95.165.90.10
 FRONT_PORT_HTTP=3002
+FRONT_NGINX_SERVER_NAME=95.165.90.10
