--- a/nginxb/Dockerfile
+++ b/nginxb/Dockerfile
@@ -14,5 +14,5 @@ RUN chown -R nginxuser:nginx /etc/nginx && \
     chmod 644 /etc/nginx/ssl/*.crt
 
 CMD ["sh", "-c", \
-    "envsubst '$$GUNICORN_PORT $$PROMETHEUS_PORT' < /etc/nginx/templates/nginx.conf.template \
+    "envsubst '$$GUNICORN_PORT $$PROMETHEUS_PORT $$SERVER_NAME' < /etc/nginx/templates/nginx.conf.template \
      > /etc/nginx/conf.d/app.conf && exec nginx -g 'daemon off;'"]
