--- a/nginxb/templates/nginx.conf.template
+++ b/nginxb/templates/nginx.conf.template
@@ -1,12 +1,12 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name ${SERVER_NAME};
     return 301 https://$host$request_uri;
 }
 
 server {
     listen 443 ssl;
-    server_name localhost;
+    server_name ${SERVER_NAME};
 
     # настройки SSL
     ssl_certificate /etc/ssl/localhost.crt;
