--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,6 @@ services:
             context: ./
             dockerfile: ./nginxb/Dockerfile
         volumes:
-            - ./nginxb/conf.d:/etc/nginx/conf.d
             - ./ssl:/etc/ssl
         environment:
             - GUNICORN_PORT=${GUNICORN_PORT}
@@ -56,7 +55,10 @@ services:
             - VITE_BACK_IP=${VITE_BACK_IP}
             - FRONT_NGINX_SERVER_NAME=${FRONT_NGINX_SERVER_NAME}
         healthcheck:
-            test: ["CMD-SHELL", "curl --fail https://localhost:443 || exit 1"]
+            test: [
+              "CMD-SHELL",
+              "curl --fail --cacert /etc/ssl/localhost.crt https://localhost:443 || exit 1"
+            ]
             interval: 60s
             timeout: 5s
             retries: 2
