elk stack was integrated (beta ver.)

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,5 @@ VITE_BACK_IP=95.165.90.10
 SERVER_NAME=95.165.90.10
 FRONT_PORT_HTTP=3002
 FRONT_NGINX_SERVER_NAME=95.165.90.10
+
+ELASTICSEARCH_PORT=1122
