--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,7 +8,7 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --upgrade pip
 RUN pip install --user -r requirements.txt
-# RUN mkdir -p /var/log/flask && chmod 777 /var/log/flask
+RUN mkdir -p /var/log/flask && chmod 777 /var/log/flask
 
 # prod
 FROM python:3.12.5-alpine
@@ -29,4 +29,4 @@ COPY russian_words.txt .
 COPY . .
 
 CMD ["sh", "-c", "gunicorn app:app -c gunicorn.conf.py"]
-# CMD ["sh", "-c", "gunicorn app:app ${GUNICORN_CMD_ARGS} & python -m prometheus_client --port=${PROMETHEUS_PORT} --addr=127.0.0.1"]
+# & python -m prometheus_client --port=${PROMETHEUS_PORT} --addr=127.0.0.1"]
