--- a/.github/workflows/backend/tests.yaml
+++ b/.github/workflows/backend/tests.yaml
@@ -1,14 +1,21 @@
 name: Backend Tests
 
 on:
-    push:
-        paths:
-            - 'backend/'
-    pull_request:
-        paths:
-            - 'backend/'
+  push:
+    paths:
+      - 'backend/'
+  pull_request:
+    paths:
+      - 'backend/'
 
 jobs:
+  lint:
+    uses: trum-ok/reusable-workflows/.github/workflows/ruff-lint.yaml@master
+    with:
+      path: 'backend'
+      python-version: '3.13.3'
+      ruff-version: '0.11.8'
+
   tests:
     needs: [lint]
     runs-on: ubuntu-latest
