--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,26 @@
 services:
     backend:
-        build:
-            context: ./backend
-            args:
-                - GUNICORN_PORT=${GUNICORN_PORT}
-                - PROMETHEUS_PORT=${PROMETHEUS_PORT}
-        volumes:
-            - ./backend/logs:/var/log/flask 
-        ports:
-            - "${GUNICORN_PORT}:${GUNICORN_PORT}"
-            - "${PROMETHEUS_PORT}:${PROMETHEUS_PORT}"
-        environment:
-            GUNICORN_PORT: ${GUNICORN_PORT}
-            PROMETHEUS_PORT: ${PROMETHEUS_PORT}
-        healthcheck:
-            test: ["CMD-SHELL", "wget --spider http://0.0.0.0:${GUNICORN_PORT}/ || exit 1"]
-            interval: 60s
-            timeout: 10s
-            retries: 2
-            start_period: 30s
-        networks:
-            - backend_net
+      build:
+        context: ./backend
+        args:
+          - APP_PORT=${APP_PORT}
+          - PROMETHEUS_PORT=${PROMETHEUS_PORT}
+      volumes:
+        - ./backend:/app 
+      ports:
+        - "${APP_PORT}:${APP_PORT}"
+        - "${PROMETHEUS_PORT}:${PROMETHEUS_PORT}"
+      environment:
+        APP_PORT: ${APP_PORT}
+        PROMETHEUS_PORT: ${PROMETHEUS_PORT}
+      healthcheck:
+        test: ["CMD-SHELL", "wget --spider http://0.0.0.0:${APP_PORT}/ || exit 1"]
+        interval: 60s
+        timeout: 10s
+        retries: 2
+        start_period: 30s
+      networks:
+        - backend_net
 
     backend_nginx:
         build:
