--- a/.github/workflows/backend.yaml
+++ b/.github/workflows/backend.yaml
@@ -3,10 +3,10 @@ name: Backend Tests
 on:
   push:
     paths:
-      - 'backend/'
+      - 'backend/**'
   pull_request:
     paths:
-      - 'backend/'
+      - 'backend/**'
 
 jobs:
   lint:
