--- a/.github/workflows/backend.yaml
+++ b/.github/workflows/backend.yaml
@@ -19,6 +19,9 @@ jobs:
   tests:
     needs: [lint]
     runs-on: ubuntu-latest
+    defaults:
+        run:
+          working-directory: backend
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -31,7 +34,6 @@ jobs:
 
       - name: Install dependencies
         run: |
-          cd ./backend
           pip install -r requirements.txt
 
       - name: Run tests
